fix - removes extra hr on mobile

--- a/content/css/theme.scss
+++ b/content/css/theme.scss
@@ -114,8 +114,8 @@ $weight-sidebar-rule: 2px;
 $color-top-nav-border: black;
 
 // This sets the thickness of the bottom border on the top nav bar on mobile
-// default is 2px
-$weight-top-nav-border: 2px;
+// default is 0px
+$weight-top-nav-border: 0px;
 
 // This sets the height of the nav bar on mobile devices.
 // If you choose a large font size for the mobile nav, you may need to increase this value.
